--- a/Diamler/DiamlerTP/DiamlerTP/DiamlerTP.csproj
+++ b/Diamler/DiamlerTP/DiamlerTP/DiamlerTP.csproj
@@ -134,13 +134,13 @@
     <Content Include="CoreDataEditLoadAddress.aspx" />
     <Content Include="CoreDataEditShipment.aspx" />
     <Content Include="CoreDataViewVehicleData.aspx" />
-    <Content Include="frmReportCall.aspx" />
-    <Content Include="frmReportViewer.aspx" />
     <Content Include="EditAdditionalInfo.aspx" />
     <Content Include="EditClient.aspx" />
     <Content Include="EditShipmentContactPerson.aspx" />
     <Content Include="EditShipmentVehicle.aspx" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="frm1ReportCall.aspx" />
+    <Content Include="frm2ReportView.aspx" />
     <Content Include="Ladeadresse.aspx" />
     <Content Include="Loginuser.aspx" />
     <Content Include="NeuAuftrag.aspx" />
@@ -162,7 +162,6 @@
       <DependentUpon>DatasetSP.xsd</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="ReportViewerForm.aspx" />
     <Content Include="Sachbearbeiter1.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -351,25 +350,11 @@
     <Compile Include="CoreDataViewVehicleData.aspx.designer.cs">
       <DependentUpon>CoreDataViewVehicleData.aspx</DependentUpon>
     </Compile>
-    <Compile Include="CMR.cs">
+    <Compile Include="CrystalReport\CMR.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>CMR.rpt</DependentUpon>
       <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="frmReportCall.aspx.cs">
-      <DependentUpon>frmReportCall.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="CrystalReport\frmReportCall.aspx.designer.cs">
-      <DependentUpon>frmReportCall.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="frmReportViewer.aspx.cs">
-      <DependentUpon>frmReportViewer.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="frmReportViewer.aspx.designer.cs">
-      <DependentUpon>frmReportViewer.aspx</DependentUpon>
     </Compile>
     <Compile Include="CrystalReport\Insurance.cs">
       <AutoGen>True</AutoGen>
@@ -480,6 +465,20 @@
     <Compile Include="EditShipmentVehicle.aspx.designer.cs">
       <DependentUpon>EditShipmentVehicle.aspx</DependentUpon>
     </Compile>
+    <Compile Include="frm1ReportCall.aspx.cs">
+      <DependentUpon>frm1ReportCall.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="frm1ReportCall.aspx.designer.cs">
+      <DependentUpon>frm1ReportCall.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="frm2ReportView.aspx.cs">
+      <DependentUpon>frm2ReportView.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="frm2ReportView.aspx.designer.cs">
+      <DependentUpon>frm2ReportView.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -526,13 +525,6 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReportHelper.cs" />
-    <Compile Include="ReportViewerForm.aspx.cs">
-      <DependentUpon>ReportViewerForm.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="ReportViewerForm.aspx.designer.cs">
-      <DependentUpon>ReportViewerForm.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Sachbearbeiter1.aspx.cs">
       <DependentUpon>Sachbearbeiter1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -650,7 +642,7 @@
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="CMR.rpt">
+    <EmbeddedResource Include="CrystalReport\CMR.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>CMR.cs</LastGenOutput>
     </EmbeddedResource>
